syntax = "proto3";

package ag_ui;

message ToolCall {
  string id = 1;
  string type = 2; 
  message Function {
    string name = 1;
    string arguments = 2; 
  }  
  Function function = 3;
}

message TextInputContent {
  string text = 1;
}

message BinaryInputContent {
  string mime_type = 1;
  string id = 2;
  string url = 3;
  string data = 4;
  string filename = 5;
}

message InputContent {
  oneof value {
    TextInputContent text = 1;
    BinaryInputContent binary = 2;
  }
}

message Message {
  string id = 1;
  string role = 2;
  optional string content = 3;
  optional string name = 4;
  repeated ToolCall tool_calls = 5;
  optional string tool_call_id = 6;
  optional string error = 7;
  repeated InputContent content_parts = 8;
}
